# wubi-query-desktop

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
assets/fonts/: README.md
config/: .gitkeep  component.plist
openspec/changes/add-window-icon/: design.md  proposal.md  tasks.md
openspec/changes/add-window-icon/specs/window-icon/: spec.md
openspec/changes/archive/2026-04-22-fix-sidebar-garbled-text/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-fix-sidebar-garbled-text/specs/window-class-matching/: spec.md
openspec/changes/archive/2026-04-22-improve-project-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-improve-project-structure/specs/asset-copy-optimization/: spec.md
openspec/changes/archive/2026-04-22-improve-project-structure/specs/cmake-modernization/: spec.md
openspec/changes/archive/2026-04-22-improve-project-structure/specs/test-framework/: spec.md
openspec/changes/archive/2026-04-22-refactor-scripts-deploy/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-refactor-scripts-deploy/specs/unified-installer/: spec.md
scripts/: README.md  build.sh  build_macos_pkg.sh  build_ubuntu_deb.sh  deploy.sh  run.sh  uninstall_ubuntu_deb.sh
src/: Application.cpp  BackgroundRenderer.cpp  FontManager.cpp  ImageLoader.cpp  main.cpp
src/include/: Application.h  BackgroundRenderer.h  FontManager.h  ImageLoader.h
src/wubi/: char_data.h  data_manager.cpp  data_manager.h  wubi_data_parser.cpp  wubi_data_parser.h
tests/: CMakeLists.txt
